# ai-advocate

./: README.md  justfile  mise.toml  package-lock.json  package.json
.idx/: dev.nix
ai-advocate-backend/: .gitignore  README.md  function_app.py  package-lock.json  package.json  pyproject.toml
ai-advocate-backend/AIAdvocateFunction/: SB376.json  SB376_summary.json  __init__.py  summarizer.py  utils.py
ai-advocate-mobile-app/: .gitignore  README.md  app.json  package-lock.json  package.json
ai-advocate-mobile-app/android/: build.gradle  settings.gradle
ai-advocate-mobile-app/android/app/: build.gradle
ai-advocate-mobile-app/app/: _layout.tsx
ai-advocate-mobile-app/app/(tabs)/: _layout.tsx  details.tsx  index.tsx  lnf.tsx  saved.tsx  search.tsx  settings.tsx
ai-advocate-mobile-app/assets/: HomeAndSavedPage.tsx  global_components.tsx  sample_data.ts  types.tsx
ai-advocate-mobile-app/assets/components/: global_components.tsx
ai-advocate-mobile-app/assets/components/Bill/: Bill.tsx  bill_styles.ts
ai-advocate-mobile-app/assets/components/Details/: Details.tsx  details_styles.ts
ai-advocate-mobile-app/assets/components/EngagementToolbar/: EngagementToolbar.tsx  engagement_toolbar_styles.ts
ai-advocate-mobile-app/assets/components/FilterButton/: FilterButton.tsx  (+1 more)
ai-advocate-mobile-app/assets/styles/: global_styles.ts
ai-advocate-web-portal/: package-lock.json  package.json  tailwind.config.mjs
ai-advocate-web-portal/src/: SB376.js  SB376_summary.js  editpage.js
ai-advocate-web-portal/src/app/: globals.css  layout.js  page.js
(+28 files in other folders)
